complete all banner elements

--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,9 @@
 
 body {
   font-family: 'Poppins', sans-serif; /* Replace with the actual font used in the design */
-  background-color: #f0f0f0; /* Placeholder color */
   height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 header {
@@ -53,8 +54,117 @@ img {
 }
 
 #banner {
+  position: relative;
   background-color: #e6e1f7;
   height: 75vh;
   margin: 40px 80px 20px 80px;
   border-radius: 20px;
+}
+
+#singleLeaf-overlay {
+  position: absolute;
+  top: 0%;
+  left: 20%;
+}
+
+#red-ghost-overlay {
+  position: absolute;
+  top: 45%;
+  right: 10%;
+}
+
+#ghost-overlay {
+  position: absolute;
+  top: 75%;
+  right: 25%;
+  width: 40px;
+}
+
+#blue-ghost-overlay {
+  position: absolute;
+  top: 25%;
+  right: 35%;
+  width: 40px;
+}
+
+#leaf-overlay {
+  position: absolute;
+  top: 40%;
+  right: 50%;
+  height: 100px;
+  width: 100px;
+}
+
+#yellow-circle-overlay {
+  position: absolute;
+  top: 0%;
+  right: 30%;
+  height: 30px;
+  width: 60px;
+}
+
+#orange-circle-overlay {
+  position: absolute;
+  bottom: 0%;
+  left: 1%;
+  height: 30px;
+  width: 60px;
+}
+
+#blue-circle-overlay {
+  position: absolute;
+  left: 0%;
+  top: 20%;
+  height: 60px;
+  width: 30px;
+}
+
+#mobile-overlay {
+  position: absolute;
+  top: 26%;
+  right: 15%;
+  height: 240px;
+  width: 240px;
+}
+
+#banner-title-overlay {
+  position: absolute;
+  top: 20%;
+  left: 5%;
+  font-size: 18px;
+}
+
+#banner-sub-title-overlay {
+  position: absolute;
+  top: 30%;
+  left: 5%;
+  font-size: 45px;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+
+#apple-store-overlay {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  height: 160px;
+  width: 160px;
+}
+
+#five-star-container-overlay {
+  position: absolute;
+  top: 59%;
+  left: 20%;
+}
+
+.star-icon {
+  height: 18px;
+  width: 18px;
+}
+
+#review-count-overlay {
+  position: absolute;
+  top: 64%;
+  left: 20%;
+  font-size: 16px;
 }
